[유튜브배너]섹션수정

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -702,90 +702,84 @@ button.slick-prev, button.slick-next {
   right: -5px; /* 화살표 위치 조정 */
 }
 
-.youtobe_section_img {
+#green19_82661 .youtobe_section_img {
   width: 1609px;
   height: 302px;
   gap: 57px;
   margin-top: 60px;
   position: relative;
 }
-.youtobe_section_img .img1,
-.youtobe_section_img .img2,
-.youtobe_section_img .img3,
-.youtobe_section_img .img4,
-.youtobe_section_img .img5 {
+#green19_82661 .youtobe_section_img .img1,
+#green19_82661 .youtobe_section_img .img2,
+#green19_82661 .youtobe_section_img .img3,
+#green19_82661 .youtobe_section_img .img4,
+#green19_82661 .youtobe_section_img .img5 {
   width: 317px !important;
   height: 260px !important;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
-.youtobe_section_img .img1 {
+#green19_82661 .youtobe_section_img .img1 {
   background: url("https://juhyun88.github.io/iweb_src/youtube/Youtobe1.jpg") center/cover no-repeat;
 }
-.youtobe_section_img .img2 {
+#green19_82661 .youtobe_section_img .img2 {
   background: url("https://juhyun88.github.io/iweb_src/youtube/Youtobe2.jpg") center/cover no-repeat;
 }
-.youtobe_section_img .img3 {
+#green19_82661 .youtobe_section_img .img3 {
   background: url("https://juhyun88.github.io/iweb_src/youtube/Youtobe3.jpg") center/cover no-repeat;
 }
-.youtobe_section_img .img4 {
+#green19_82661 .youtobe_section_img .img4 {
   background: url("https://juhyun88.github.io/iweb_src/youtube/Youtobe4.jpg") center/cover no-repeat;
 }
-.youtobe_section_img .img5 {
+#green19_82661 .youtobe_section_img .img5 {
   background: url("https://juhyun88.github.io/iweb_src/youtube/Youtobe1.jpg") center/cover no-repeat;
 }
-.youtobe_section_img .slick-prev,
-.youtobe_section_img .slick-next {
+#green19_82661 .youtobe_section_img .slick-prev,
+#green19_82661 .youtobe_section_img .slick-next {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   width: 50px;
   height: 50px;
 }
-.youtobe_section_img .slick-arrow.slick-prev::after {
+#green19_82661 .youtobe_section_img .slick-arrow.slick-prev::after {
   left: -63px !important;
   width: 2px !important;
   background-color: #f17522 !important;
 }
-.youtobe_section_img .slick-arrow.slick-next::after {
+#green19_82661 .youtobe_section_img .slick-arrow.slick-next::after {
   left: 30% !important;
   background-color: #f17522 !important;
 }
-.youtobe_section_img .slick-arrow.slick-prev::before {
+#green19_82661 .youtobe_section_img .slick-arrow.slick-prev::before {
   left: -63px !important;
   width: 2px !important;
   background-color: #f17522 !important;
 }
-.youtobe_section_img .slick-arrow.slick-next::before {
+#green19_82661 .youtobe_section_img .slick-arrow.slick-next::before {
   left: 30% !important;
   background-color: #f17522 !important;
 }
-
-.slick-list {
+#green19_82661 .slick-list {
   margin: 0;
   padding: 0;
   width: 655px !important;
   overflow: hidden !important;
 }
-
-.slick-track {
+#green19_82661 .slick-track {
   display: flex !important;
   width: auto !important;
 }
-
-.slick-slide .slick-active {
+#green19_82661 .slick-slide .slick-active {
   width: auto !important;
 }
-
-.slick-prev {
+#green19_82661 .slick-prev {
   left: 7px; /* 화살표 위치 조정 */
 }
-
-.slick-prev .slick-arrow {
+#green19_82661 .slick-prev .slick-arrow {
   left: 50px; /* 화살표 위치 조정 */
 }
-
-.slick-next {
+#green19_82661 .slick-next {
   right: -5px; /* 화살표 위치 조정 */
 }
