--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -584,6 +584,7 @@ button.slick-prev, button.slick-next {
     }
 }
 
+//첫번째 배너 오른쪽 슬라이드 섹션//
 #green19_82324 {
     .banArea {
         display: flex;
@@ -724,7 +725,8 @@ button.slick-prev, button.slick-next {
     }
 }
 
-
+//유뷰트 섹션//
+#green19_82661{
 .youtobe_section_img {
     width: 1609px;
     height: 302px;
@@ -817,3 +819,4 @@ button.slick-prev, button.slick-next {
 }
 
 
+}
