[유튜브배너]이미지 수정

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -707,7 +707,11 @@ button.slick-prev, button.slick-next {
   height: 302px;
   gap: 57px;
   margin-top: 60px;
+  margin-bottom: 100px;
   position: relative;
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
 }
 #green19_82661 .youtobe_section_img .img1,
 #green19_82661 .youtobe_section_img .img2,
@@ -742,29 +746,28 @@ button.slick-prev, button.slick-next {
   transform: translateY(-50%);
   width: 50px;
   height: 50px;
+  background-color: var(--Main, #F17522);
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  z-index: 10;
 }
-#green19_82661 .youtobe_section_img .slick-arrow.slick-prev::after {
-  left: -63px !important;
-  width: 2px !important;
-  background-color: #f17522 !important;
+#green19_82661 .youtobe_section_img .slick-prev {
+  left: -60px; /* 이전 버튼 위치 */
 }
-#green19_82661 .youtobe_section_img .slick-arrow.slick-next::after {
-  left: 30% !important;
-  background-color: #f17522 !important;
-}
-#green19_82661 .youtobe_section_img .slick-arrow.slick-prev::before {
-  left: -63px !important;
-  width: 2px !important;
-  background-color: #f17522 !important;
-}
-#green19_82661 .youtobe_section_img .slick-arrow.slick-next::before {
-  left: 30% !important;
-  background-color: #f17522 !important;
+#green19_82661 .youtobe_section_img .slick-next {
+  right: -60px; /* 다음 버튼 위치 */
 }
 #green19_82661 .slick-list {
   margin: 0;
   padding: 0;
-  width: 655px !important;
+  width: 1300px !important;
   overflow: hidden !important;
 }
 #green19_82661 .slick-track {
@@ -773,13 +776,4 @@ button.slick-prev, button.slick-next {
 }
 #green19_82661 .slick-slide .slick-active {
   width: auto !important;
-}
-#green19_82661 .slick-prev {
-  left: 7px; /* 화살표 위치 조정 */
-}
-#green19_82661 .slick-prev .slick-arrow {
-  left: 50px; /* 화살표 위치 조정 */
-}
-#green19_82661 .slick-next {
-  right: -5px; /* 화살표 위치 조정 */
 }
