--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -732,7 +732,11 @@ button.slick-prev, button.slick-next {
     height: 302px;
     gap:57px;
     margin-top: 60px;
+    margin-bottom: 100px;
     position: relative;
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
 
     .img1,
     .img2,
@@ -771,31 +775,32 @@ button.slick-prev, button.slick-next {
         transform: translateY(-50%);
         width: 50px;
         height: 50px;
+        background-color: var(--Main, #F17522);
+        border: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        color: white;
+        font-size: 20px;
+        font-weight: bold;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        z-index: 10;
     }
-    .slick-arrow.slick-prev::after{
-        left: -63px !important;
-        width: 2px !important ;
-        background-color: #f17522 !important;
+
+    .slick-prev {
+        left: -60px; /* 이전 버튼 위치 */
     }
-    .slick-arrow.slick-next::after{
-        left: 30% !important;
-        background-color: #f17522 !important;
-    }
-    .slick-arrow.slick-prev::before{
-        left: -63px !important;
-        width: 2px !important ;
-        background-color: #f17522 !important;
-    }
-    .slick-arrow.slick-next::before{
-        left: 30% !important;
-        background-color: #f17522 !important;
+
+    .slick-next {
+        right: -60px; /* 다음 버튼 위치 */
     }
 }
 
 .slick-list {
     margin: 0;
     padding: 0;
-    width: 655px !important;
+    width: 1300px !important;
     overflow: hidden !important;
 }
 
@@ -807,16 +812,4 @@ button.slick-prev, button.slick-next {
 .slick-slide .slick-active {
     width: auto !important;
 }
-.slick-prev {
-    left: 7px; /* 화살표 위치 조정 */
-}
-.slick-prev .slick-arrow {
-    left: 50px; /* 화살표 위치 조정 */
-}
-
-.slick-next {
-    right: -5px; /* 화살표 위치 조정 */
-}
-
-
 }
