--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -775,17 +775,24 @@ button.slick-prev, button.slick-next {
         transform: translateY(-50%);
         width: 50px;
         height: 50px;
-        background-color: var(--Main, #F17522);
-        border: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        color: white;
-        font-size: 20px;
-        font-weight: bold;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        z-index: 10;
+    }
+    .slick-arrow.slick-prev::after{
+        left: -63px !important;
+        width: 2px !important ;
+        background-color: #f17522 !important;
+    }
+    .slick-arrow.slick-next::after{
+        left: 30% !important;
+        background-color: #f17522 !important;
+    }
+    .slick-arrow.slick-prev::before{
+        left: -63px !important;
+        width: 2px !important ;
+        background-color: #f17522 !important;
+    }
+    .slick-arrow.slick-next::before{
+        left: 30% !important;
+        background-color: #f17522 !important;
     }
 
     .slick-prev {
