--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -702,6 +702,12 @@ button.slick-prev, button.slick-next {
   right: -5px; /* 화살표 위치 조정 */
 }
 
+#green19_82661 {
+  background: var(--Color-2, #DBEBF6);
+}
+#green19_82661 .banArea {
+  margin-top: -75px;
+}
 #green19_82661 .youtobe_section_img {
   width: 1609px;
   height: 302px;
@@ -748,21 +754,21 @@ button.slick-prev, button.slick-next {
   height: 50px;
 }
 #green19_82661 .youtobe_section_img .slick-arrow.slick-prev::after {
-  left: -63px !important;
+  left: 275px !important;
   width: 2px !important;
   background-color: #f17522 !important;
 }
 #green19_82661 .youtobe_section_img .slick-arrow.slick-next::after {
-  left: 30% !important;
+  left: 40% !important;
   background-color: #f17522 !important;
 }
 #green19_82661 .youtobe_section_img .slick-arrow.slick-prev::before {
-  left: -63px !important;
+  left: 275px !important;
   width: 2px !important;
   background-color: #f17522 !important;
 }
 #green19_82661 .youtobe_section_img .slick-arrow.slick-next::before {
-  left: 30% !important;
+  left: 40% !important;
   background-color: #f17522 !important;
 }
 #green19_82661 .youtobe_section_img .slick-prev {
@@ -774,8 +780,9 @@ button.slick-prev, button.slick-next {
 #green19_82661 .slick-list {
   margin: 0;
   padding: 0;
-  width: 1300px !important;
+  width: 1225px !important;
   overflow: hidden !important;
+  left: 160px;
 }
 #green19_82661 .slick-track {
   display: flex !important;
