[퀵버튼]수정

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -791,3 +791,15 @@ button.slick-prev, button.slick-next {
 #green19_82661 .slick-slide .slick-active {
   width: auto !important;
 }
+
+#green19_82309 .quick-bottom .quick-btn img {
+  width: 44px !important;
+  height: 44px !important;
+}
+
+#green19_82309 .quick-btn4 {
+  background: var(--Color-4, #F9F1DE);
+  border-radius: 25.414px;
+  border: none;
+  padding: 3px;
+}
