--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -812,5 +812,7 @@ button.slick-prev, button.slick-next {
   justify-content: space-between;
   align-items: center;
   flex-shrink: 0;
+}
+#green19_82661 .map_img {
   background: url("https://juhyun88.github.io/iweb_src/youtube/map.jpg") center/cover no-repeat;
 }
