--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -849,6 +849,7 @@ padding: 10px;
 justify-content: space-between;
 align-items: center;
 flex-shrink: 0;
-    
+    .map_img{
     background: url("https://juhyun88.github.io/iweb_src/youtube/map.jpg") center/cover no-repeat;
+    }
 }
