--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -812,7 +812,31 @@ button.slick-prev, button.slick-next {
   justify-content: space-between;
   align-items: center;
   flex-shrink: 0;
+  background-color: white;
 }
 #green19_82681 .map_img {
   background: url("https://juhyun88.github.io/iweb_src/youtube/map.jpg") center/cover no-repeat;
+  width: 917px;
+  height: 517px;
+}
+#green19_82681 .map_section {
+  display: flex;
+  align-items: center;
+  width: 1364px;
+  height: 517px;
+}
+#green19_82681 .map_text {
+  display: flex;
+  width: 447px;
+  height: 375px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 40px;
+}
+#green19_82681 .map_text span {
+  color: #000000;
+  font-family: "Paperlogy 5 Medium" !important;
+  font-size: 35px !important;
+  font-style: normal;
+  line-height: normal;
 }
