--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -614,6 +614,11 @@ button.slick-prev, button.slick-next {
             padding-bottom: 32px;
             padding-left: 98px;
 
+            .slick-track{
+
+                gap:25px;
+            }
+
             span {
                 color: #000;
                 font-family: "Paperlogy 5 Medium" !important;
@@ -647,7 +652,7 @@ button.slick-prev, button.slick-next {
             .img2,
             .img3,
             .img4 {
-                width: 356px !important;
+                // width: 356px !important;
                 height: 287px !important;
                 background-size: cover;
                 background-position: center;
@@ -820,6 +825,7 @@ button.slick-prev, button.slick-next {
 .slick-track {
     display: flex !important;
     width: auto !important;
+
 }
 
 .slick-slide .slick-active {
@@ -865,7 +871,7 @@ button.slick-prev, button.slick-next {
     .map_text{
         display: flex;
         width: 447px;
-        height: 375px;
+        height: 440px;
         flex-direction: column;
         align-items: flex-start;
         gap: 40px;
@@ -877,6 +883,9 @@ button.slick-prev, button.slick-next {
             line-height: normal; 
         }
         .map_text_logo{
+            width: 386px;
+            height: 85px;
+            padding:0px 4.885px 0.366px 0px;
             background: url("https://juhyun88.github.io/iweb_src/logoimg/logo129.png") center/cover no-repeat;
         }
     }
