--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -605,9 +605,6 @@ button.slick-prev, button.slick-next {
   padding-bottom: 32px;
   padding-left: 98px;
 }
-#green19_82324 .firstbanner-rightsection .rightsection .slick-track {
-  gap: 25px;
-}
 #green19_82324 .firstbanner-rightsection .rightsection span {
   color: #000;
   font-family: "Paperlogy 5 Medium" !important;
@@ -638,10 +635,12 @@ button.slick-prev, button.slick-next {
 #green19_82324 .firstbanner-rightsection .rightsection_img .img2,
 #green19_82324 .firstbanner-rightsection .rightsection_img .img3,
 #green19_82324 .firstbanner-rightsection .rightsection_img .img4 {
+  width: 356px !important;
   height: 287px !important;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  margin: 0 15px;
 }
 #green19_82324 .firstbanner-rightsection .rightsection_img .img1 {
   background: url("https://juhyun88.github.io/iweb_src/first_banner/Rlbg.jpg") center/cover no-repeat;
