[맵]위치 수정

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -12,6 +12,10 @@ body, #headerwarp {
   display: none !important;
 }
 
+#green19_82661 + div {
+  display: none !important;
+}
+
 #gNavi.gNavi > ul:after {
   content: "";
   position: absolute;
@@ -807,12 +811,8 @@ button.slick-prev, button.slick-next {
 
 #green19_82681 {
   display: flex;
-  width: 1920px;
   height: 824px;
-  padding: 10px;
-  justify-content: space-between;
-  align-items: center;
-  flex-shrink: 0;
+  justify-content: center;
   background-color: white;
 }
 #green19_82681 .map_img {
