--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -714,9 +714,6 @@ button.slick-prev, button.slick-next {
 #green19_82661 {
   background: var(--Color-2, #DBEBF6);
 }
-#green19_82661 .banArea {
-  margin-top: -75px;
-}
 #green19_82661 .youtobe_section_img {
   width: 1609px;
   height: 302px;
@@ -814,6 +811,7 @@ button.slick-prev, button.slick-next {
   height: 824px;
   justify-content: center;
   background-color: white;
+  align-items: center;
 }
 #green19_82681 .map_img {
   background: url("https://juhyun88.github.io/iweb_src/youtube/map.jpg") center/cover no-repeat;
