--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -15,7 +15,11 @@ body, #headerwarp{
         display: none !important;
     }
 }
-    
+#green19_82661 {
+    ~ div {
+        display: none !important;
+    }
+}
 #gNavi{
     &.gNavi{
        
