--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -16,8 +16,8 @@ body, #headerwarp {
   display: none !important;
 }
 
-#green19_82661 ~ div {
-  display: none !important;
+#green19_82661 > div:nth-child(2) {
+  display: none !important; /* 두 번째 자식 div 숨기기 */
 }
 
 #gNavi.gNavi > ul:after {
