--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -294,8 +294,8 @@ body, #headerwarp{
             display: flex;
             flex-direction: column;
             bottom: 0;
-            position: absolute;
             gap: 15px;
+            align-items: center;
 
             .quick-btn {
                 background: none;
