섹션 위치 조정

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -240,6 +240,7 @@ body, #headerwarp {
   align-items: center;
   background: var(--Color-2, #DBEBF6);
   width: 100%;
+  margin-bottom: auto;
 }
 #green19_82309 .quick-menu .quick-top_num2 .quick-img {
   display: flex;
@@ -264,6 +265,7 @@ body, #headerwarp {
   bottom: 0;
   gap: 15px;
   align-items: center;
+  margin-bottom: 20px;
 }
 #green19_82309 .quick-bottom .quick-btn {
   background: none;
@@ -693,6 +695,7 @@ button.slick-prev, button.slick-next {
   padding: 0;
   width: 655px !important;
   overflow: hidden !important;
+  left: auto;
 }
 #green19_82324 .firstbanner-rightsection .slick-track {
   display: flex !important;
@@ -804,7 +807,7 @@ button.slick-prev, button.slick-next {
 }
 
 #green19_82309 .quick-bottom .quick-btn img {
-  width: 44px !important;
+  width: 30px !important;
   height: 44px !important;
 }
 
