유튜브섹션 이미지 추가 및 섹션 정리

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -734,6 +734,7 @@ button.slick-prev, button.slick-next {
   display: flex !important;
   align-items: center;
   justify-content: center;
+  right: 135px;
 }
 .youtobe_section_img .img1,
 .youtobe_section_img .img2,
@@ -759,7 +760,7 @@ button.slick-prev, button.slick-next {
   background: url("https://juhyun88.github.io/iweb_src/youtube/Youtobe4.jpg") center/cover no-repeat;
 }
 .youtobe_section_img .img5 {
-  background: url("https://juhyun88.github.io/iweb_src/youtube/Youtobe1.jpg") center/cover no-repeat;
+  background: url("https://juhyun88.github.io/iweb_src/youtube/youtube5.jpg") center/cover no-repeat;
 }
 .youtobe_section_img .slick-prev,
 .youtobe_section_img .slick-next {
@@ -816,6 +817,10 @@ button.slick-prev, button.slick-next {
   border-radius: 25.414px;
   border: none;
   padding: 3px;
+}
+
+div[style] {
+  display: none !important; /* 부모 요소 숨기기 */
 }
 
 #green19_82681 {
