--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -719,9 +719,15 @@ button.slick-prev, button.slick-next {
   margin-top: -20px !important;
   margin-bottom: -20px !important;
 }
+#green19_82661 #youtobeInfoCon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 770px;
+}
 
 .area {
-  margin-top: auto !important;
+  margin-top: 100px !important;
 }
 
 .youtobe_section_img {
