--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -745,10 +745,18 @@ button.slick-prev, button.slick-next {
     background: var(--Color-2, #DBEBF6);
     margin-top: -20px !important;
     margin-bottom: -20px !important;
+    
+        #youtobeInfoCon{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 770px;  
+        }
+    
 }
 
 .area{
-    margin-top: auto !important;
+    margin-top: 100px !important;
 }
 
 .youtobe_section_img {
